Secure + 'requestAutoCert' tenant changes
- Collect kube-root-ca.crt from tenant namespace, store in tenant
- Wrap minio client/minio admin client in context managers
- Write tenant ca to cert file, modify minio client/admin client to use it
- Update all minio methods to use minio client cert managers
- Update README and example deployment to reflect required RBAC

--- a/manifests/example_deployment.yaml
+++ b/manifests/example_deployment.yaml
@@ -27,13 +27,13 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - configmaps
       - secrets
       - services
     verbs:
       - get
   - apiGroups:
       - bfiola.dev
-      - networking.k8s.io
     resources:
       - miniousers
       - miniobuckets
