Misc + MinioUser secretKeyRef changes
- Add 'resolution' methods for all minio resources (to convert 'specs' into actual items), and add models for 'resolved' models (e.g., MinioUserSpec has a MinioUser, etc.)
- Replace secretKey with secretKeyRef for MinioUserSpec
- Operator utilizes resolution methods
- All minio client/minio admin client operations are now executed in a threadpool executor to prevent blocking the operator
- create_minio_policy_binding no longer raises permanent errors when users/policies are not found to allow for retry
- Minio tenants are always fetched now.  Caching on startup could cause the operator to crash if a tenant wasn't fully initialized when fetched
- OperatorError can now be flagged as 'recoverable' - dictating the kopf error that gets thrown at the hook boundary
- apply_diff method now can handle nested keys

--- a/manifests/crds.yaml
+++ b/manifests/crds.yaml
@@ -59,8 +59,15 @@ spec:
               properties:
                 accessKey:
                   type: string
-                secretKey:
-                  type: string
+                secretKeyRef:
+                  type: object
+                  properties:
+                    namespace:
+                      type: string
+                    name:
+                      type: string
+                    key:
+                      type: string
                 tenant:
                   type: string
             status:
