PolicyBinding + 'group' field
- Add 'group' field to PolicyBinding custom resource definition
- Add validation to PolicyBindingSpec to ensure only one of group/user is set
- Update policy binding resolution to pass through group value
- Update create and delete policy binding methods to pass through group value

--- a/manifests/crds.yaml
+++ b/manifests/crds.yaml
@@ -206,6 +206,8 @@ spec:
                   type: string
                 user:
                   type: string
+                group:
+                  type: string
             status:
               type: object
               properties:
