Group + GroupBinding custom resources
- Updated CRDs, example deployments and example resources to reflect added resources
- Implemented models, operator hook functions, and minio client/admin client CRUD operations
- Added vim to devcontainer so that k9s edit functionality works as intended

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,6 +8,9 @@ ENV DEBIAN_FRONTEND="noninteractive"
 
 RUN apt -y update
 
+# install standalone tooling
+RUN apt -y install vim
+
 # install python dependencies separately because it takes a long time
 RUN apt -y install \ 
         build-essential \
