Update dockerfile to expose health endpoint, update example deployment to include readinessProbe and livenessProbe

--- a/manifests/example-deployment.yaml
+++ b/manifests/example-deployment.yaml
@@ -78,4 +78,22 @@ spec:
             - run
           image: docker.io/benfiola/minio-operator-ext:0.0.1
           name: operator
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8888
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 5
+            successThreshold: 1
+            timeoutSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8888
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 5
+            successThreshold: 1
+            timeoutSeconds: 5
       serviceAccountName: minio-operator-ext
