Unignore setup.py file, add setup.py file to support editable mode (while using pyproject.toml)

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ __pycache__
 /*.py
 
 # DO NOT ingnore necessary root-level python files
-/setup.py
+!/setup.py
 
 # DO NOT ignore template files
 !*template*
