Migrate functions to instance methods of the operator class, use bfiola-operator-core==0.1.2, update crd printer columns for minio policy bindings

--- a/manifests/crds.yaml
+++ b/manifests/crds.yaml
@@ -339,6 +339,10 @@ spec:
           type: string
           description: User
           jsonPath: .status.currentSpec.user
+        - name: Group
+          type: string
+          description: Group
+          jsonPath: .status.currentSpec.group
   scope: Namespaced
   names:
     plural: miniopolicybindings
