--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,21 +22,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: set up docker builder
-        run: docker buildx create --platform linux/arm64,linux/amd64 --use
-      - name: install dependencies
-        run: pip install --no-color --progress-bar=off --editable ".[dev]"
-      - name: set data
-        id: data
+      - name: run
+        id: main
         run: |
-          echo "version=$(devtools print-next-version)" >> "${GITHUB_OUTPUT}"
-          echo "tag=$(devtools print-next-version --as-tag)" >> "${GITHUB_OUTPUT}"
-      - name: set project version
-        run: devtools set-version "${{steps.data.outputs.version}}"
-      - name: build
-        run: devtools build docker
-      - name: publish
-        run: devtools publish docker --token "${{secrets.DOCKER_TOKEN}}"
+          docker buildx create --platform linux/arm64,linux/amd64 --use
+          pip install --no-color --progress-bar=off --editable ".[dev]"
+          devtools publish-github-action docker --token "${{secrets.DOCKER_TOKEN}}"
       - name: tag
         uses: actions/github-script@v7
         with:
