--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,8 +42,8 @@
   },
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/python": {
-      "pythonVersion": "3.10.2"
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.10.2"
     }
   },
   "postCreateCommand": ".devcontainer/post-create.sh"
