--- a/manifests/crds.yaml
+++ b/manifests/crds.yaml
@@ -27,16 +27,10 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
@@ -93,16 +87,12 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
+                currentSecretKeyRefResourceVersion:
+                  type: string
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
@@ -150,16 +140,10 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
@@ -209,16 +193,10 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
@@ -288,16 +266,10 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
@@ -359,16 +331,10 @@ spec:
             status:
               type: object
               properties:
-                synced:
-                  type: boolean
                 currentSpec:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
       additionalPrinterColumns:
-        - name: Synced
-          type: boolean
-          description: Synced
-          jsonPath: .status.synced
         - name: Tenant Namespace
           type: string
           description: Tenant Namespace
