--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
-# Ignore vscode project configuration
-**/.vscode/*.json
+# ignore root level go files
+/dev/dev.go
 
-# Ignore environment files
-*.env
+# ignore IDE files
+/.vscode
 
-# Ignore python generated files
-*.egg-info
-__pycache__
-.pytest_cache
-
-# Ignore root-level python files (e.g., test scripts)
-/*.py
-
-# DO NOT ingnore necessary root-level python files
-!/setup.py
-
-# DO NOT ignore template files
-!*template*
+# ignore dev assets
+/.dev
