--- a/manifests/example-resources.yaml
+++ b/manifests/example-resources.yaml
@@ -75,6 +75,7 @@ spec:
   tenantRef:
     namespace: minio-tenant
     name: myminio
+  version: 2012-10-17
 ---
 apiVersion: bfiola.dev/v1
 kind: MinioPolicyBinding
