--- a/manifests/example-deployment.yaml
+++ b/manifests/example-deployment.yaml
@@ -15,15 +15,6 @@ rules:
       - tenants
     verbs:
       - get
-      - watch
-      - list
-      - patch
-  - apiGroups:
-      - ""
-    resources:
-      - events
-    verbs:
-      - create
   - apiGroups:
       - ""
     resources:
@@ -45,7 +36,7 @@ rules:
       - get
       - watch
       - list
-      - patch
+      - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
