--- a/charts/operator/Chart.yaml
+++ b/charts/operator/Chart.yaml
@@ -1,15 +1,7 @@
+---
 apiVersion: v2
 name: operator
-description: A Helm chart for Kubernetes
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+description: Deploy minio-operator-ext, an operator that allows for declarative management of MinIO resources
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
@@ -21,4 +13,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "2.1.0"
